--- a/anexos.tex
+++ b/anexos.tex
@@ -1,4 +1,5 @@
 \section*{1. Encuesta para Personas Oyentes}
+\label{anexo:encuesta_oyentes}
 
 \begin{enumerate}
     \item \textbf{Información Básica}
