--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -462,3 +462,12 @@
   note = "(visitado 2024)"
 }
 
+@online{AdonideFont,
+  author = {{Graphique, La Boîte}},
+  title = {Adonide},
+  year = {s.f.},
+  url = {https://www.myfonts.com/es/collections/adonide-font-la-boite-graphique},
+  note = {Accedido: 2024-09-12}
+}
+
+
