--- a/introduccion.tex
+++ b/introduccion.tex
@@ -1,5 +1,5 @@
 Este proyecto surge de la necesidad de superar las barreras de comunicación para los usuarios de LENSEGUA. ``Señas Chapinas'' es una iniciativa que consiste en el desarrollo de una aplicación móvil para Android, diseñada para traducir lengua de señas a texto utilizando tecnologías avanzadas como visión por computadora y aprendizaje profundo. Con un enfoque en el vocabulario esencial para la vida cotidiana y situaciones de emergencia, la aplicación tiene como objetivo facilitar las interacciones diarias y mejorar la calidad de vida de la comunidad sorda. 
 
-El módulo de diseño y desarrollo móvil se centra en crear una aplicación que ofrezca una experiencia de usuario agradable y una interfaz visualmente atractiva. Para esto, se implementará un plan de diseño que no solo asegure la funcionalidad y la accesibilidad, sino que también incorpore elementos visuales que reflejen la cultura guatemalteca, conectando así con los usuarios de una manera más profunda y significativa.
+El módulo de diseño y desarrollo móvil se centra en crear una aplicación que ofrezca una experiencia de usuario agradable y una interfaz visualmente atractiva. Para esto, se implementó un plan de diseño que no solo asegura la funcionalidad y la accesibilidad, sino que también incorpora elementos visuales que reflejen la cultura guatemalteca, conectando así con los usuarios de una manera más profunda y significativa.
 
 En colaboración con la comunidad sorda y con base en una retroalimentación constante, ``Señas Chapinas'' busca ser más que una aplicación; aspira a ser un recurso valioso que no solo mejore la comunicación, sino que también fomente una mayor inclusión y entendimiento dentro de la sociedad guatemalteca.
