--- a/justificacion.tex
+++ b/justificacion.tex
@@ -1,6 +1,6 @@
 La comunicación es un derecho fundamental y un pilar esencial para la interacción humana, indispensable en la educación, el trabajo y la participación activa en la sociedad \cite{NacionesUnidas2024}. Sin embargo, las barreras comunicativas aún limitan la interacción entre personas sordas y oyentes, restringiendo el acceso igualitario a oportunidades sociales y laborales. En respuesta a esta realidad, "Señas Chapinas" surge como una solución innovadora para superar estas barreras.
 
-Aprovechando la amplia adopción de teléfonos inteligentes en Guatemala \cite{Xie2023}, donde la mayoría de estos dispositivos operan con el sistema Android \cite{Xie2023}, este proyecto busca desarrollar una aplicación móvil que actúe como un puente de comunicación eficiente y accesible. Esta aplicación se dedica a fortalecer la autonomía de las personas sordas y promover el uso de LENSEGUA.
+Aprovechando la amplia adopción de teléfonos inteligentes en Guatemala \cite{Xie2023}, donde la mayoría de estos dispositivos operan con el sistema Android \cite{Xie2023}, este proyecto busca desarrollar una aplicación móvil que actúe como un puente de comunicación eficiente y accesible. Esta aplicación pretende fortalecer la autonomía de las personas sordas y promover el uso de LENSEGUA.
 
 El desarrollo de la aplicación involucra un análisis exhaustivo de las necesidades de los usuarios finales, recogiendo sus voces y experiencias mediante entrevistas y consultas. Este enfoque centrado en el usuario asegura que la aplicación responda adecuadamente a sus necesidades específicas. Además, se ha revisado cuidadosamente la legislación vigente, incluido el Decreto del Congreso de la República de Guatemala Número 3-2020, que reconoce la Lengua de Señas de Guatemala \cite{CongresoGuatemala2022}.
 
