--- a/main.tex
+++ b/main.tex
@@ -137,7 +137,7 @@
 		\vfill
 		\Large Trabajo de graduación en modalidad megaproyecto presentado por \\
 		\Large \nombreestudiante \\
-		\Large Para optar al grado académico de Licenciado en \uvgcarrera \\
+		\Large Para optar al grado académico de Licenciada en \uvgcarrera \\
 		\vfill
 		\large Guatemala, \mesentrega del \anoentrega
 	\end{center}
