--- a/marco_teorico.tex
+++ b/marco_teorico.tex
@@ -1,5 +1,5 @@
 \section{Lengua de Señas}
-Desde tiempos remotos, las personas con discapacidad auditiva han enfrentado significativos desafíos comunicativos, lo que les llevó a desarrollar su propio sistema de comunicación. Así surgió la lengua de señas, un conjunto estructurado de gestos visuales que permite a la comunidad sorda expresar ideas y emociones. Esta lengua, al igual que otras, está regida por normas lingüísticas establecidas por comunidades sordas \cite{MarzoPena2022}.
+Desde tiempos remotos, las personas con discapacidad auditiva han enfrentado significativos desafíos para expresarse, lo que les llevó a desarrollar su propio sistema de comunicación. Así surgió la lengua de señas, un conjunto estructurado de gestos visuales que permite a la comunidad sorda expresar ideas y emociones. Esta lengua, al igual que otras, está regida por normas lingüísticas establecidas por comunidades sordas \cite{MarzoPena2022}.
 
 \subsection{Historia de la lengua de señas}
 La lengua de señas se desarrolló de manera independiente por la comunidad sorda para satisfacer sus necesidades comunicativas. Históricamente estigmatizada y mal entendida, era considerada un lenguaje de gestos simple hasta que investigaciones realizadas en 1960 por William Stokoe revelaron su capacidad para expresar ideas complejas y estructuradas \cite{RodriguezVelasquezSF}.
@@ -13,7 +13,7 @@ A raíz de la necesidad de comunicación en las comunidades sordas, cada país h
 \subsection{Lengua de Señas en la Actualidad}
 En la actualidad, la lengua de señas se está adaptando a un entorno globalizado y tecnológicamente avanzado, donde las necesidades comunicativas evolucionan constantemente. Estos cambios han impulsado la creación de legislaciones, políticas, formación de asociaciones y el desarrollo de nuevas tecnologías destinadas a minimizar las barreras comunicativas. Un ejemplo significativo es la iniciativa de las Naciones Unidas al proclamar el 23 de septiembre como Día Internacional de las Lenguas de Señas, enfatizando la importancia de estas lenguas \cite{Parada2022}.
 
-Sin embargo, a pesar de estos avances, persisten desafíos significativos. La falta de uniformidad de las lenguas de señas a nivel global requiere que las personas aprendan la lengua de señas específica de cada comunidad, lo cual impide la existencia de una forma de comunicación internacional uniforme \cite{RuizVilla2022}.
+Sin embargo, a pesar de estos avances, persisten desafíos significativos. La falta de estandarización de las lenguas de señas a nivel global requiere que las personas aprendan la lengua de señas específica de cada comunidad, lo cual impide la existencia de una forma de comunicación internacional uniforme \cite{RuizVilla2022}.
 
 Además, la lengua de señas, a menudo catalogada como una lengua minoritaria, es aprendida solamente por una pequeña fracción de la población sin discapacidades auditivas. Esta limitada difusión crea una brecha de comunicación significativa, contribuyendo a la marginación de la comunidad sorda y limitando su participación plena en actividades sociales y económicas. Esto subraya la necesidad de una mayor educación y sensibilización sobre la lengua de señas para promover una verdadera inclusión \cite{MelendezLabrador2021}.
 
@@ -28,9 +28,9 @@ Antes de la formalización del uso de LENSEGUA, no existía un manual estandariz
 \subsection{Legislación}
 En términos legislativos, Guatemala ha hecho avances significativos en la última década. En 2020 el Congreso de la República de Guatemala mediante el Decreto 3-2020, reconoce oficialmente la Lengua de Señas de Guatemala como la lengua oficial para la comunicación en lengua de señas dentro del país. Este marco legal fue el resultado de los esfuerzos conjuntos de varias asociaciones que abogaron por su formalización, destacando la importancia de reconocer y apoyar la comunicación para las personas sordas en Guatemala \cite{CongresoGuatemala2020} .
 
-El Decreto establece que todas las instituciones públicas y privadas deben garantizar la inclusión de la LENSEGUA como parte de su comunicación y servicios. Además, se promueve la educación bilingüe (español y LENSEGUA) en las escuelas que atienden a estudiantes sordos, asegurando así su derecho a una educación equitativa y accesible \cite{CongresoGuatemala2020}.
+El Decreto establece que todas las instituciones públicas y privadas deben garantizar la inclusión de LENSEGUA como parte de su comunicación y servicios. Además, se promueve la educación bilingüe (español y LENSEGUA) en las escuelas que atienden a estudiantes sordos, asegurando así su derecho a una educación equitativa y accesible \cite{CongresoGuatemala2020}.
 
-Este reconocimiento no solo valida a LENSEGUA como una lengua completa y estructurada, sino que también impulsa la creación de políticas y programas destinados a mejorar la accesibilidad en todos los aspectos de la vida pública para la comunidad sorda, desde la educación hasta el acceso a los servicios de salud y legales. El Decreto promueve la inclusión y asegura que las personas con discapacidad auditiva tengan acceso a la educación y la información en su lengua materna, libre de cualquier discriminación \cite{CongresoGuatemala2020}.
+Este reconocimiento no solo valida a LENSEGUA como una lengua completa y estructurada, sino que también impulsa la creación de políticas y programas destinados a mejorar la accesibilidad en todos los aspectos de la vida pública para la comunidad sorda, desde la educación hasta el acceso a los servicios de salud y legales. El Decreto promueve la inclusión y asegura que las personas con discapacidad auditiva tengan acceso a la educación y la información en lengua de señas, libre de cualquier discriminación \cite{CongresoGuatemala2020}.
 
 \subsection{Aprendizaje y Recursos}
 LENSEGUA se puede aprender en varias instituciones y a través de recursos en línea que buscan facilitar el acceso y la difusión de esta lengua. Entre las principales entidades que ofrecen cursos y formación en LENSEGUA están \cite{LenseguaSF}:
@@ -59,33 +59,33 @@ La gramática y estructura de LENSEGUA reflejan una vasta complejidad lingüíst
     \end{itemize}
     \item \textbf{Ausencia de género y artículos}: Como en muchas lenguas de señas, LENSEGUA no utiliza género gramatical ni artículos.
     \begin{itemize}
-        \item Español: ``la casa", ``el perro".
-        \item LENSEGUA signa ``casa" y ``perro" sin modificadores adicionales.
+        \item Español: ``la casa'', ``el perro''.
+        \item LENSEGUA signa ``casa'' y ``perro'' sin modificadores adicionales.
     \end{itemize}
     \item \textbf{No Uso de Preposiciones}: LENSEGUA omite preposiciones, que en español son cruciales para las relaciones espaciales o temporales. La relación se establece a través del contexto y la configuración de los signos.
     \begin{itemize}
-        \item Español: ``en la casa".
+        \item Español: ``en la casa''.
         \item LENSEGUA: se usa gesto para indicar la ubicación relativa y el signo de casa.
     \end{itemize}
     \item \textbf{Omisión de Signos de Puntuación y Mayúsculas}: LENSEGUA no utiliza signos de puntuación ni mayúsculas. La escritura refleja una secuencia continua de signos, que se diferencia notablemente de la estructura del español.
     \begin{itemize}
-        \item LENSEGUA: ``Disculpa mi hija no llega colegio porque muy enferma tiene tos gripe que en casa ya tomar medicinas”.
+        \item LENSEGUA: ``Disculpar mi hija no llega colegio porque muy enferma tiene tos casa tomar medicinas''.
     \end{itemize}
     \item \textbf{Verbos No Conjugados}: En LENSEGUA, los verbos no se conjugan. El tiempo y el aspecto se indican con signos específicos al principio de la frase o a través de la expresión facial.
     \begin{itemize}
-        \item Español: ``Yo estoy comiendo”.
-        \item LENSEGUA: se signa ``yo comer”.
+        \item Español: ``Yo estoy comiendo''.
+        \item LENSEGUA: se signa ``yo comer''.
     \end{itemize}
     \item \textbf{Orden Gramatical}: El orden gramatical típico en LENSEGUA es Tiempo, Lugar, Sujeto, Objeto, Verbo (TLSOV), diferente al orden Sujeto, Verbo, Objeto (SVO) del español. Este orden facilita que el contexto temporal y espacial quede establecido claramente al inicio.
     \begin{itemize}
-        \item Español: ``Yo ayer jugué futbol”.
-        \item LENSEGUA: se signa ``pasado yo fútbol jugar”.
+        \item Español: ``Yo ayer jugué futbol''.
+        \item LENSEGUA: se signa ``ayer yo fútbol jugar''.
     \end{itemize}
 \end{itemize}
 
 \section{Diseño de Interfaz de Usuario (UI)}
 \subsection{Definición de UI (Interfaz de Usuario)}
-El diseño de la interfaz de usuario (UI) se dedica a la creación de los elementos visuales e interactivos de un producto digital. En esencia, se trata de diseñar lo que los usuarios ven en sus pantallas \cite{OrtegaSF}.
+El diseño de la interfaz de usuario (UI por sus siglas en ingles, \textit{User Interface}) se dedica a la creación de los elementos visuales e interactivos de un producto digital. En esencia, se trata de diseñar lo que los usuarios ven en sus pantallas \cite{OrtegaSF}.
 
 La interfaz de usuario determina en gran medida las primeras impresiones que tienen estos acerca de un negocio o producto. Cuando los usuarios pueden navegar fácilmente por una interfaz y completar las tareas deseadas, no solo mejora su experiencia, sino que también beneficia al negocio en general. Cuanto más visualmente atractiva y acogedora sea una interfaz, más probable es que atraiga a los usuarios y los motive a explorar más \cite{OrtegaSF}.
 
@@ -133,24 +133,23 @@ El tamaño de los objetos táctiles en una aplicación móvil es crucial, ya que
 
 Investigaciones sobre el tamaño y el espaciado de los botones han establecido estándares que funcionan para la mayoría de los usuarios. Los estudios encontraron que los usuarios tienen la menor precisión táctil en botones de menos de 42 píxeles, los cuales se usan generalmente para funciones de baja prioridad. La mayor precisión se encontró en botones de entre 42 y 72 píxeles. Por ello, se utilizan botones de aproximadamente 60 píxeles para funciones de prioridad media, mientras que los de más de 72 píxeles se reservan para funciones de alta prioridad, asegurando así la accesibilidad para todos los usuarios \cite{Anthony2019}.
 
-Además del tamaño, existen ciertos márgenes y áreas táctiles recomendadas alrededor de los botones para garantizar que sean fácilmente accesibles y utilizables. Estos márgenes aseguran que haya suficiente espacio alrededor de los botones para evitar errores de pulsación. Dependiendo del tamaño del botón, se recomienda un margen de 12 a 24 píxeles para botones grandes, de 24 a 36 píxeles para botones medianos y de 36 a 48 píxeles para botones pequeños \cite{Anthony2019}. 
-
-\begin{figure}[!h]
+\begin{figure}[H]
     \centering
-    \includegraphics[width=0.5\linewidth]{figuras/optimal_button_size.png}
+    \includegraphics[width=0.6\linewidth]{figuras/optimal_button_size.png}
     \caption{Tamaño óptimo de botones según su prioridad}
     \label{fig:botones_optimos}
 \end{figure}
 
+Además del tamaño, existen ciertos márgenes y áreas táctiles recomendadas alrededor de los botones para garantizar que sean fácilmente accesibles y utilizables. Estos márgenes aseguran que haya suficiente espacio alrededor de los botones para evitar errores de pulsación. Dependiendo del tamaño del botón, se recomienda un margen de 12 a 24 píxeles para botones grandes, de 24 a 36 píxeles para botones medianos y de 36 a 48 píxeles para botones pequeños \cite{Anthony2019}. 
 
-Asimismo, la ubicación de los botones es fundamental para la usabilidad. Los usuarios están acostumbrados a interactuar con dispositivos digitales a lo largo del día y tienden a buscar ciertos elementos en ubicaciones predecibles. Por esta razón, es importante posicionar los botones en lugares donde los usuarios esperan encontrarlos, como en la parte inferior de la pantalla para acciones frecuentes o en la esquina superior derecha para opciones adicionales. Esta previsibilidad mejora la eficiencia y reduce la frustración del usuario \cite{Pickaso2022}.
-
-\begin{figure} [h]
+\begin{figure} [H]
     \centering
     \includegraphics[width=0.5\linewidth]{figuras/optimal_space_buttons.png}
     \caption{Espaciado óptimo de botones según su tamaño}
     \label{fig:esapcio_optimo}
 \end{figure}
+
+Asimismo, la ubicación de los botones es fundamental para la usabilidad. Los usuarios están acostumbrados a interactuar con dispositivos digitales a lo largo del día y tienden a buscar ciertos elementos en ubicaciones predecibles. Por esta razón, es importante posicionar los botones en lugares donde los usuarios esperan encontrarlos, como en la parte inferior de la pantalla para acciones frecuentes o en la esquina superior derecha para opciones adicionales. Esta previsibilidad mejora la eficiencia y reduce la frustración del usuario \cite{Pickaso2022}.
 
 
 \subsubsection{Diseño Responsivo}
@@ -159,7 +158,7 @@ El diseño responsivo es crucial para aplicaciones móviles, ya que asegura que 
 Dado que las pantallas de los dispositivos móviles varían en densidad, con más píxeles por pulgada en pantallas de mayor resolución, es importante utilizar píxeles independientes de la densidad (dp) para definir las dimensiones de los elementos de la interfaz. Esto asegura que los elementos mantengan su tamaño y proporción adecuados en diferentes dispositivos, proporcionando uniformidad y coherencia visual \cite{Pickaso2022}.
 
 \subsubsection{Principios de Diseño}
-Hay una serie de principios de diseño de interfaces para lograr que el producto digital satisfaga al cliente final \cite{AnonimoUX}.
+Hay una serie de principios de diseño de interfaz para lograr que el producto digital satisfaga al cliente final \cite{AnonimoUX}.
 
 \begin{itemize}
     \item \textbf{Simplicidad}: Es crucial evitar elementos innecesarios que puedan causar confusión \cite{AnonimoUX}.
@@ -207,7 +206,7 @@ Seleccionar la tipografía correcta es esencial para asegurar que el mensaje se 
 
 \section{Experiencia de Usuario (UX)}
 \subsection{Definición de UX (Experiencia de Usuario)}
-La experiencia de usuario (UX) se refiere a las percepciones, sentimientos y respuestas que los usuarios tienen al interactuar con un producto digital \cite{Chacon2024}.
+La experiencia de usuario (UX por sus siglas en inglés \textit{User Experience}) se refiere a las percepciones, sentimientos y respuestas que los usuarios tienen al interactuar con un producto digital \cite{Chacon2024}.
 
 \subsection{Diferencias entre UX y UI}
 El diseño de interfaz de usuario (UI) y la experiencia de usuario (UX) son conceptos estrechamente relacionados, pero tienen enfoques distintos y desempeñan roles específicos en el desarrollo de productos digitales. Mientras que UX se enfoca en el recorrido y en las interacciones de un usuario en todo el producto digital, UI se centra en cómo se ve y funciona el producto \cite{Chacon2024}.
@@ -237,13 +236,6 @@ La construcción de la experiencia de usuario para un producto se divide en vari
         \item \textbf{Análisis de la competencia:} Recopila información sobre tecnologías similares y reseñas de productos existentes  \cite{Semi2022}.
     \end{itemize}
 
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.5\linewidth]{figuras/proceso_diseno.png}
-    \caption{Proceso de Diseño de Experencia de Usuario}
-    \label{fig:enter-label}
-\end{figure}
-
     
     \item \textbf{Organización}: Organiza toda la información obtenida durante la etapa de investigación utilizando herramientas como \cite{Leon2013}:
     \begin{itemize}
@@ -251,9 +243,19 @@ La construcción de la experiencia de usuario para un producto se divide en vari
         \item \textbf{Flujo de Usuarios:} Diagrama que muestra la ruta que tomará un usuario en una aplicación para completar una tarea  \cite{Semi2022}.
         \item \textbf{Estructura Alámbrica/ Wireframes:} Visualización 2D de un producto digital, que va desde bocetos básicos a lápiz hasta diseños digitales interactivos (de baja, media y alta fidelidad)  \cite{Semi2022}.
     \end{itemize}
+    
     \item \textbf{Diseño}: En la etapa de creación de prototipos, los wireframes de alta fidelidad se transforman en demostraciones interactivas que simulan fielmente la apariencia y el comportamiento del producto. Aquí se integra la investigación realizada en UI, considerando colores, tipografía, tamaños y espaciado de elementos, iconografía, entre otros. Las herramientas utilizadas incluyen Figma, Sketch y Adobe XD  \cite{Semi2022}.
+    
     \item \textbf{Prueba}: Al finalizar la implementación, se realizan pruebas para asegurar que el producto cumple con las necesidades y expectativas de los usuarios  \cite{Semi2022}.
 \end{itemize}
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{figuras/proceso_diseno.png}
+    \caption{Proceso de Diseño de Experencia de Usuario}
+    \label{fig:enter-label}
+\end{figure}
+
 
 \section{Desarrollo Móvil en Android}
 \subsection{Razones para elegir Android como plataforma de desarrollo}
@@ -271,24 +273,24 @@ Según datos recientes, Android domina el tráfico web móvil en el país, con u
 Asimismo, Android es conocido por su diversidad en términos de dispositivos, desde teléfonos de alta gama hasta opciones más accesibles. También ofrece un alto nivel de flexibilidad y opciones de personalización, lo que facilita el desarrollo de aplicaciones. Finalmente, el ecosistema de desarrollo de Android está soportado con una vasta cantidad de recursos, herramientas y una comunidad activa de desarrolladores \cite{AnonimoAndroid}.
 
 \subsection{Arquitectura de aplicaciones Android}
-La arquitectura de una aplicación Android se basa en el patrón Modelo - Vista - Controlador (MVC). Aunque es muy común utilizar MVVM (Modelo - Vista - ViewModel), pues ofrece una separación más clara de la lógica de presentación y facilita el mantenimiento en comparación con MVC \cite{RamosSF}.
+La arquitectura de una aplicación Android se basa en el patrón Modelo - Vista - Controlador (MVC). Aunque es muy común utilizar MVVM (Modelo - Vista - \textit{ViewModel}), pues ofrece una separación más clara de la lógica de presentación y facilita el mantenimiento en comparación con MVC \cite{RamosSF}.
 
 \subsubsection{Componentes}
 \begin{itemize}
     \item \textbf{Modelo}: Contiene los datos, el estado y la lógica del negocio \cite{Bhadoria2013}.
-    \item \textbf{Vista}: Representa la interfaz de usuario. Se comunica con el ViewModel a través de mecanismos de enlace de datos (data binding), permitiendo una actualización automática de la UI cuando cambian los datos \cite{Bhadoria2013}.
-    \item \textbf{ViewModel}: Actúa como un intermediario entre el Modelo y la Vista. Expone datos y comandos que la Vista puede consumir y ejecutar, y notifica a la Vista sobre cambios en los datos utilizando observables (como LiveData) \cite{Bhadoria2013}.
+    \item \textbf{Vista}: Representa la interfaz de usuario. Se comunica con el \textit{ViewModel} a través de mecanismos de enlace de datos (\textit{data binding}), permitiendo una actualización automática de la UI cuando cambian los datos \cite{Bhadoria2013}.
+    \item \textbf{\textit{ViewModel}}: Actúa como un intermediario entre el Modelo y la Vista. Expone datos y comandos que la Vista puede consumir y ejecutar, y notifica a la Vista sobre cambios en los datos utilizando observables (como \textit{LiveData}) \cite{Bhadoria2013}.
 \end{itemize}
 
 \subsubsection{Flujo de Trabajo}
 \begin{itemize}
-    \item La Vista se enlaza automáticamente al ViewModel para observar los datos \cite{Bhadoria2013}.
-    \item El ViewModel obtiene los datos del Modelo y prepara la lógica de presentación \cite{Bhadoria2013}.
-    \item Cualquier cambio en el Modelo se refleja automáticamente en la Vista a través del ViewModel \cite{Bhadoria2013}.
-    \item La interacción del usuario en la Vista invoca métodos en el ViewModel, que a su vez pueden actualizar el Modelo \cite{Bhadoria2013}.
+    \item La Vista se enlaza automáticamente al \textit{ViewModel} para observar los datos \cite{Bhadoria2013}.
+    \item El \textit{ViewModel} obtiene los datos del Modelo y prepara la lógica de presentación \cite{Bhadoria2013}.
+    \item Cualquier cambio en el Modelo se refleja automáticamente en la Vista a través del \textit{ViewModel} \cite{Bhadoria2013}.
+    \item La interacción del usuario en la Vista invoca métodos en el \textit{ViewModel}, que a su vez pueden actualizar el Modelo \cite{Bhadoria2013}.
 \end{itemize}
 
-\begin{figure}
+\begin{figure} [H]
     \centering
     \includegraphics[width=0.5\linewidth]{figuras/mvvm.png}
     \caption{Diagrama de funcionamiento MVVM}
@@ -298,18 +300,18 @@ La arquitectura de una aplicación Android se basa en el patrón Modelo - Vista 
 \subsection{Buenas prácticas de desarrollo Android}
 Al desarrollar aplicaciones para Android, es esencial seguir ciertas buenas prácticas para asegurar la calidad y la eficiencia del producto final \cite{PhillipsStewart2022}:
 
-\subsubsection{Uso de Layouts Adecuados}
+\subsubsection{Uso de \textit{Layouts} Adecuados}
 \begin{itemize}
-    \item \textbf{ConstraintLayout}: Es eficiente y flexible, permitiendo posicionar elementos de manera relativa a otros elementos \cite{PhillipsStewart2022}.
-    \item \textbf{LinearLayout}: Organiza los elementos en una sola fila o columna, siendo útil para diseños sencillos y alineaciones básicas \cite{PhillipsStewart2022}.
-    \item \textbf{RelativeLayout}: Permite posicionar los elementos en relación a otros elementos o a sus propios padres, ofreciendo más flexibilidad pero con un mayor costo de rendimiento comparado con ConstraintLayout \cite{PhillipsStewart2022}.
+    \item \textbf{\textit{ConstraintLayout}}: Es eficiente y flexible, permitiendo posicionar elementos de manera relativa a otros elementos \cite{PhillipsStewart2022}.
+    \item \textbf{\textit{LinearLayout}}: Organiza los elementos en una sola fila o columna, siendo útil para diseños sencillos y alineaciones básicas \cite{PhillipsStewart2022}.
+    \item \textbf{\textit{RelativeLayout}}: Permite posicionar los componentes en relación a otros o a sus propios padres, ofreciendo más flexibilidad pero con un mayor costo de rendimiento comparado con \textit{ConstraintLayout} \cite{PhillipsStewart2022}.
 \end{itemize}
 
 \subsubsection{Gestión de Recursos}
 \begin{itemize}
     \item Utilizar unidades independientes de densidad (dp) para asegurar que los elementos de la interfaz mantengan su tamaño y proporciones adecuadas en dispositivos con diferentes tamaños de pantalla \cite{PhillipsStewart2022}.
     \item Definir colores, estilos y dimensiones en archivos de recursos para promover la reutilización y mantener la consistencia del diseño \cite{PhillipsStewart2022}.
-    \item Utilizar Gradle para gestionar dependencias, lo que te permitirá mantener el código actualizado y seguro \cite{PhillipsStewart2022}.
+    \item Utilizar \textit{Gradle} para gestionar dependencias, lo que te permitirá mantener el código actualizado y seguro \cite{PhillipsStewart2022}.
 \end{itemize}
 
 \subsubsection{Optimización del Rendimiento}
