--- a/objetivos.tex
+++ b/objetivos.tex
@@ -1,5 +1,5 @@
 \section{Objetivo General}
-Diseñar y desarrollar "Señas Chapinas", una aplicación para dispositivos Android, que traduce la lengua de señas guatemalteca (LENSEGUA) a texto en español. Esta herramienta busca eliminar las barreras comunicativas existentes en la actualidad, promoviendo la inclusión y mejorando significativamente las oportunidades de interacción social, educativa y laboral para personas sordas en Guatemala.
+Diseñar y desarrollar "Señas Chapinas", una aplicación para dispositivos Android, que traduce la lengua de señas guatemalteca (LENSEGUA) a texto con gramática española. Esta herramienta busca eliminar las barreras comunicativas existentes en la actualidad, promoviendo la inclusión y mejorando significativamente las oportunidades de interacción social, educativa y laboral para personas sordas en Guatemala.
 
 \section{Objetivos Específicos}
 \begin{itemize}
