--- a/recomendaciones.tex
+++ b/recomendaciones.tex
@@ -13,6 +13,9 @@ Tras la culminación del desarrollo de la aplicación ``Señas Chapinas'', se pr
 
     \item \textbf{Incorporar la traducción inversa de español a LENSEGUA:} 
     Para hacer la aplicación más completa, se recomienda implementar la traducción inversa, permitiendo a los usuarios traducir texto de español a LENSEGUA. Esta funcionalidad expandiría significativamente las posibilidades de la aplicación, facilitando que las personas oyentes aprendan y utilicen LENSEGUA de manera más práctica y efectiva.
+
+    \item \textbf{Expandir la aplicación a sistemas iOS:} 
+    Para aumentar el alcance de la aplicación, sería recomendable desarrollar una versión para dispositivos iOS. Esta ampliación permitiría a usuarios de la plataforma de Apple beneficiarse de las funcionalidades de la aplicación, logrando un mayor impacto y accesibilidad para personas sordas y oyentes en un rango más amplio de dispositivos.
 \end{enumerate}
 
 Estas recomendaciones están diseñadas para fortalecer las funcionalidades actuales de la aplicación, mejorar la experiencia de usuario y abrir nuevas oportunidades de uso y crecimiento en el futuro.
