--- a/resumen.tex
+++ b/resumen.tex
@@ -1,4 +1,4 @@
-``Señas Chapinas'' es un proyecto innovador que responde a la necesidad crítica de mejorar la comunicación para los usuarios de LENSEGUA en Guatemala. Desarrollada como una aplicación móvil para Android, esta herramienta utiliza tecnologías de visión por computadora y aprendizaje profundo para traducir la lengua de señas guatemalteca a texto español. La aplicación está especialmente diseñada para cubrir vocabulario esencial, tanto para situaciones cotidianas como de emergencia, facilitando así las interacciones diarias y elevando la calidad de vida de la comunidad sorda.
+``Señas Chapinas'' es un proyecto innovador que responde a la necesidad crítica de mejorar la comunicación para los usuarios de LENSEGUA en Guatemala. Desarrollada como una aplicación móvil para Android, esta herramienta utiliza tecnologías de visión por computadora y aprendizaje profundo para traducir la lengua de señas guatemalteca a texto con gramática española. La aplicación está especialmente diseñada para cubrir vocabulario esencial, tanto para situaciones cotidianas como de emergencia, facilitando así las interacciones diarias y elevando la calidad de vida de la comunidad sorda.
 
 A lo largo del desarrollo de ``Señas Chapinas'', se implementaron metodologías de diseño centradas en el usuario para crear una interfaz que no solo es funcional y accesible, sino también culturalmente relevante, reflejando la identidad guatemalteca para conectar profundamente con los usuarios. Este enfoque asegura que la aplicación no solo sea una herramienta de traducción, sino también un medio para fomentar la inclusión y el entendimiento cultural.
 
