--- a/datos_estudiante.tex
+++ b/datos_estudiante.tex
@@ -6,18 +6,18 @@
 % Datos del estudiante:
 % --------------------------------------------------------------------------------
 % Nombre completo
-\def \nombreestudiante {Carol Andree Arévalo Estrada}
+\def \nombreestudiante {Carol Andreé Arévalo Estrada}
 % Carné
 \def \uvgcarne {20461}
 % Facultad
 \def \uvgfacultad {Ingeniería}
 % Carrera
-\def \uvgcarrera {Ingeniería en Ciencias de la Computación y TI}
+\def \uvgcarrera {Ingeniería en Ciencias de la Computación y Tecnologías de la Información}
 
 % Datos del trabajo:
 % --------------------------------------------------------------------------------
 % Título completo
-\def \titulotesis {Señas Chapinas: Traductor de Lengua de Señas \n Módulo de Diseño y Desarrollo Móvil}
+\def \titulotesis {Señas Chapinas: Traductor de LENSEGUA \newline Módulo de Diseño y Desarrollo Móvil}
 % Mes de entrega
 \def \mesentrega {octubre }
 % Año de entrega
